# pipeline-sentinel

./: Makefile  pyproject.toml  requirements.txt
airflow/: Dockerfile  README_AIRFLOW.md  docker-compose.yml
airflow/scripts/: seed_ratings_data.py
sentinel/: core.py  report.py
sentinel/checks/: null_rate.py  range_check.py  row_count.py  schema.py
tests/: conftest.py
tests/test_checks/: test_distribution.py  test_schema.py  test_uniqueness_range_anomaly.py
tests/test_integration/: test_full_pipeline.py
tests/test_sinks/: test_bigquery_sink.py
